# guide_me

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GuideMe.qmlproject  GuideMe.sln  LICENSE  README.md  account.cpp  account.h  all_paths.cpp  all_paths.h  data_manager.cpp  data_manager.h  graph.h  graph_state.cpp  graph_state.h  guideme.qmlproject.qtds  main.cpp  map.cpp  map.h  map_helpers.cpp  map_helpers.h  qmlmodules
GuideMe/: Boarders.h  CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  Project1.vcxproj  Project1.vcxproj.filters  SFMLNode.cpp  SFMLNode.h  TransportationMap.txt  WorkFlow.cpp  WorkFlow.h  admin.cpp  admin.h  main.cpp  user.cpp  user.h  work_flow.cpp
GuideMe/data/: data.txt
GuideMe/docs/: design_doc.md
GuideMe/include/: account.h  all_paths.h  data_manager.h  map.h
GuideMe/src/: all_paths.cpp  graph_state.cpp  main.cpp  map.cpp
content/: AdminAddPage.qml  AdminDeletePage.qml  AdminUpdatePage.qml  AdminWelcomePage.qml  App.qml  CMakeLists.txt  GraphCompletionTestPage.qml  GraphTraversalPage.qml  LandingPage.qml  LogInPage.qml  ProfilePage.qml  ServicePage.qml  ServiceResultsPage.qml  SignUpPage.qml  resource_file.qrc
data/: data.txt
docs/: ERD.md  design_doc.md
imports/: CMakeLists.txt
imports/GuideMe/: CMakeLists.txt  qmldir
imports/GuideMe/designer/: plugin.metainfo
include/: account.h  all_paths.h  data_manager.h  graph.h  graph_state.h  map.h  map_helpers.h  work_flow.h
src/: Project.code-workspace  account.cpp  admin.cpp  all_paths.cpp  data_manager.cpp  graph_state.cpp  import_qml_plugins.h  main.cpp  map.cpp  map_helpers.cpp  user.cpp  work_flow.cpp
